fix: add updated field to blog schema and entries, enhance footer layout for better readability

--- a/src/styles/pages/blog.css
+++ b/src/styles/pages/blog.css
@@ -79,8 +79,17 @@ body[class^="blog-"] {
 			}
 		}
 		& > footer {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+			column-gap: 2rem;
+			margin-block: 1em;
 			font-size: 0.875rem;
 			color: var(--color-subtle-text);
+
+			> p {
+				margin: unset;
+			}
 		}
 	}
 }
@@ -113,4 +122,7 @@ pre {
 	border-radius: 0.5rem;
 	padding-inline: 1.5rem;
 	padding-block: 1.5rem;
+}
+
+h2#update {
 }
